--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: Starlight 🌟 Build documentation sites with Astro
+title: Sapiens IA © Building the future of Artificial Intelligences and human evolution.
 description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
 template: splash
 hero:
-  title: Make your docs shine with Starlight
-  tagline: Everything you need to build a stellar documentation website. Fast, accessible, and easy-to-use.
+  title: Building the next generarion of workers
+  tagline: Everything you need to get started on artificial intelligence and autonomous agents. Fast, automatic, and highly-customizable.
   image:
     file: ../../assets/hero-star.webp
   actions:
@@ -12,7 +12,7 @@ hero:
       icon: right-arrow
       variant: primary
       link: /getting-started/
-    - text: View on GitHub
+    - text: Playground
       icon: external
       link: https://github.com/withastro/starlight
 ---
