--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   title: Building the next generarion of workers
   tagline: Everything you need to get started on artificial intelligence and autonomous agents. Fast, automatic, and highly-customizable.
   image:
-    file: ../../assets/hero-star.webp
+    file: ../../assets/8FAD4BB2-FA75-460A-9344-7281E3-unscreen.gif
   actions:
     - text: Get started
       icon: right-arrow
@@ -25,7 +25,7 @@ import AboutAstro from '../../components/about-astro.astro';
     Includes: Site navigation, search, internationalization, SEO, easy-to-read
     typography, code highlighting, dark mode and more.
   </Card>
-  <Card title="Powered by Astro" icon="rocket">
+  <Card title="Powered by Sapiens IA" icon="rocket">
     Leverage the full power and performance of Astro. Extend Starlight with your
     favorite Astro integrations and libraries.
   </Card>
