--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   title: Building the next generarion of workers
   tagline: Everything you need to get started on artificial intelligence and autonomous agents. Fast, automatic, and highly-customizable.
   image:
-    file: ../../assets/8FAD4BB2-FA75-460A-9344-7281E3-unscreen.gif
+    file: ../../assets/monacho.gif
   actions:
     - text: Get started
       icon: right-arrow
