--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   title: Building the next generarion of workers
   tagline: Everything you need to get started on artificial intelligence and autonomous agents. Fast, automatic, and highly-customizable.
   image:
-    file: ../../assets/monacho.gif
+    file: ../../assets/BE437CBE-BDBA-4383-949C-C232B712D78C.jpeg
   actions:
     - text: Get started
       icon: right-arrow
@@ -14,7 +14,7 @@ hero:
       link: /getting-started/
     - text: Playground
       icon: external
-      link: https://github.com/withastro/starlight
+      link: https://labs.sapiens-ia.com/demo
 ---
 
 import { CardGrid, Card } from '@astrojs/starlight/components';
@@ -39,10 +39,10 @@ import AboutAstro from '../../components/about-astro.astro';
   </Card>
 </CardGrid>
 
-<AboutAstro title="Brought to you by">
-Astro is the all-in-one web framework designed for speed.
+<AboutAstro title="Powered by Sapiens IA Laboratories©">
+Sapiens IA Laboratories is a company focused on the development of Artificial Intelligence and autonomous agents designed to think by themselves.
 Pull your content from anywhere and deploy everywhere, all powered by your favorite UI components and libraries.
 
-[Learn about Astro](https://astro.build/)
+[Learn about Sapiens IA](https://sapiens-ia.com/enterprise)
 
 </AboutAstro>
