--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   title: Building the next generarion of workers
   tagline: Everything you need to get started on artificial intelligence and autonomous agents. Fast, automatic, and highly-customizable.
   image:
-    file: ../../assets/BE437CBE-BDBA-4383-949C-C232B712D78C.jpeg
+    file: ../../assets/7EE06B74-D2BC-48E1-BD67-49BD1CE83D9D.png
   actions:
     - text: Get started
       icon: right-arrow
