--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   title: Building the next generarion of workers
   tagline: Everything you need to get started on artificial intelligence and autonomous agents. Fast, automatic, and highly-customizable.
   image:
-    file: ../../assets/7EE06B74-D2BC-48E1-BD67-49BD1CE83D9D.png
+    file: ../../assets/2EC49E2C-7BEC-4A31-A528-264024CCD79C.gif
   actions:
     - text: Get started
       icon: right-arrow
@@ -21,21 +21,17 @@ import { CardGrid, Card } from '@astrojs/starlight/components';
 import AboutAstro from '../../components/about-astro.astro';
 
 <CardGrid stagger>
-  <Card title="Documentation that delights" icon="open-book">
-    Includes: Site navigation, search, internationalization, SEO, easy-to-read
-    typography, code highlighting, dark mode and more.
+  <Card title="Intelligent Solutions for the Modern World" icon="open-book">
+    At Sapiens IA, we develop highly advanced and personalized AI solutions for companies and organizations, designed to bring intelligence and automation to the modern world.
   </Card>
   <Card title="Powered by Sapiens IA" icon="rocket">
-    Leverage the full power and performance of Astro. Extend Starlight with your
-    favorite Astro integrations and libraries.
+    Our AI solutions leverage the full power and performance of advanced technologies, including machine learning, natural language processing, and autonomous agents.
   </Card>
-  <Card title="Markdown, Markdoc, and MDX" icon="document">
-    Bring your favorite markup language. Starlight gives you built-in
-    frontmatter validation with TypeScript type-safety.
+  <Card title="Innovative Technologies" icon="document">
+    We utilize the latest in innovative technologies to provide intelligent automation solutions that drive efficiency and productivity, while reducing costs and improving accuracy.
   </Card>
-  <Card title="Bring your own UI components" icon="puzzle">
-    Starlight ships as a framework-agnostic, complete docs solution. Extend with
-    React, Vue, Svelte, Solid, and more.
+  <Card title="Customizable to Your Needs" icon="puzzle">
+    Our AI solutions are highly customizable to meet your specific business needs, allowing you to streamline your operations and stay ahead of the competition.
   </Card>
 </CardGrid>
 
