--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   title: Building the next generarion of workers
   tagline: Everything you need to get started on artificial intelligence and autonomous agents. Fast, automatic, and highly-customizable.
   image:
-    file: ../../assets/2EC49E2C-7BEC-4A31-A528-264024CCD79C.gif
+    file: ../../assets/7C8BE7BA-1DB2-4DF6-8277-AB7EA0B44210.svg
   actions:
     - text: Get started
       icon: right-arrow
