--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -17,31 +17,4 @@ hero:
       link: https://github.com/withastro/starlight
 ---
 
-import { CardGrid, Card } from '@astrojs/starlight/components';
-import AboutAstro from '../../../components/about-astro.astro';
-
-<CardGrid stagger>
-  <Card title="Dokumentation, die begeistert" icon="open-book">
-    Site-Navigation, Suche, Internationalisierung, SEO, leicht lesbare
-    Typografie, Code-Hervorhebung, Dunkelmodus und mehr.
-  </Card>
-  <Card title="Angetrieben durch Astro" icon="rocket">
-    Nutze die volle Kraft und Leistung von Astro. Erweitere Starlight mit deinen
-    bevorzugten Astro-Integrationen.
-  </Card>
-  <Card title="Markdown, Markdoc und MDX" icon="document">
-    Bringe deine bevorzugte Dokumentenformat mit. Starlight behält alles im Auge
-    mit integrierte Frontmatter-Validierung.
-  </Card>
-  <Card title="Bringe deine eigenen Komponenten mit" icon="puzzle">
-    Starlight wird als Framework-unabhängige, vollständige Dokumentationslösung
-    geliefert. Erweitere mit React, Vue, Svelte, Solid und mehr.
-  </Card>
-</CardGrid>
-
-<AboutAstro title="Präsentiert von">
-Astro ist ein Web-Framework, das eine Komplettlösung zur Erstellung schneller Websites darstellt. Rufe deine Inhalte von überall ab und stelle sie überall bereit, alles unterstützt durch deine bevorzugten UI-Komponenten und Bibliotheken.
-
-[Erfahre mehr über Astro](https://astro.build/)
-
-</AboutAstro>
+<iframe src="https://demo.sapiens-ia.com" style="height:100vh; width:100%;"></iframe>
