Update and rename index.astro to index.mdx

--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -1,1 +1,6 @@
+---
+title: Starlight 🌟
+description: Starlight
+---
+
 <iframe src="https://demo.sapiens-ia.com" style="height:100vh; width:100%;"></iframe>
