--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -1,6 +1,5 @@
 ---
-title: Starlight 🌟
-description: Starlight
+template: splash
 ---
 
 <iframe src="https://demo.sapiens-ia.com" style="height:100vh; width:100%;"></iframe>
