--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -15,4 +15,8 @@ hero:
     - text: View on GitHub
       link: https://github.com/astronaut/my-project
       icon: external
+  content: |
+    <iframe src="https://www.example.com" width="100%" height="500px"></iframe>
 ---
+
+
