--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -16,7 +16,9 @@ hero:
       link: https://github.com/astronaut/my-project
       icon: external
   content: |
-    <iframe src="https://www.example.com" width="100%" height="500px"></iframe>
+    <iframe src="https://demo.sapiens-ia.com" width="100%" height="500px"></iframe>
 ---
+
+    <iframe src="https://demo.sapiens-ia.com" width="100%" height="500px"></iframe>
 
 
