--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -3,6 +3,6 @@ title: My Home Page
 template: splash
 ---
 
-<iframe src="https://demo.sapiens-ia.com" width="100%" height="500px"></iframe>
+<iframe src="https://demo.sapiens-ia.com" width="100%" height="100%"></iframe>
 
 
