--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -20,6 +20,9 @@ hero:
 import { CardGrid, Card } from '@astrojs/starlight/components';
 import AboutAstro from '../../components/about-astro.astro';
 
+
+![An illustration of planets and stars featuring the word “astro”](https://raw.githubusercontent.com/withastro/docs/main/public/default-og-image.png)
+
 <CardGrid stagger>
   <Card title="Intelligent Solutions for the Modern World" icon="open-book">
     At Sapiens IA, we develop highly advanced and personalized AI solutions for companies and organizations, designed to bring intelligence and automation to the modern world.
@@ -34,6 +37,8 @@ import AboutAstro from '../../components/about-astro.astro';
     Our AI solutions are highly customizable to meet your specific business needs, allowing you to streamline your operations and stay ahead of the competition.
   </Card>
 </CardGrid>
+
+![An illustration of planets and stars featuring the word “astro”](https://raw.githubusercontent.com/withastro/docs/main/public/default-og-image.png)
 
 <AboutAstro title="Powered by Sapiens IA Laboratories©">
 Sapiens IA Laboratories is a company focused on the development of Artificial Intelligence and autonomous agents designed to think by themselves.
