--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -21,7 +21,7 @@ import { CardGrid, Card } from '@astrojs/starlight/components';
 import AboutAstro from '../../components/about-astro.astro';
 
 
-![An illustration of planets and stars featuring the word “astro”](https://raw.githubusercontent.com/withastro/docs/main/public/default-og-image.png)
+![An illustration of planets and stars featuring the word “sapiens”](https://odyssey-theme-eight.vercel.app/assets/images/home/orange.gif)
 
 <CardGrid stagger>
   <Card title="Intelligent Solutions for the Modern World" icon="open-book">
@@ -38,7 +38,7 @@ import AboutAstro from '../../components/about-astro.astro';
   </Card>
 </CardGrid>
 
-![An illustration of planets and stars featuring the word “astro”](https://raw.githubusercontent.com/withastro/docs/main/public/default-og-image.png)
+![An illustration of planets and stars featuring the word “astro”](https://odyssey-theme-eight.vercel.app/assets/images/home/undertale.gif)
 
 <AboutAstro title="Powered by Sapiens IA Laboratories©">
 Sapiens IA Laboratories is a company focused on the development of Artificial Intelligence and autonomous agents designed to think by themselves.
