--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -21,7 +21,8 @@ import { CardGrid, Card } from '@astrojs/starlight/components';
 import AboutAstro from '../../components/about-astro.astro';
 
 
-![An illustration of planets and stars featuring the word “sapiens”](https://odyssey-theme-eight.vercel.app/assets/images/home/orange.gif)
+<iframe width="560" height="315" src="https://youtu.be/roKsb9YNqV8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 <CardGrid stagger>
   <Card title="Intelligent Solutions for the Modern World" icon="open-book">
