--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -18,4 +18,4 @@ hero:
 ---
 
 
-<iframe src="https://demo.sapiens-ia.com" style="height:100vh; width:100%;"></iframe>
+<iframe src="https://sapienschatdemo.vercel.app" style="height:100vh; width:100%;"></iframe>
