--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -19,9 +19,14 @@ hero:
 
 import { CardGrid, Card } from '@astrojs/starlight/components';
 import AboutAstro from '../../components/about-astro.astro';
+import YoutubeEmbed from '../../components/YoutubeEmbed.astro';
 
 
-<iframe width="350" height="400" src="https://www.youtube.com/embed/uT2XqguNkEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+## Quick intro
+
+**Check out the getting started video from the laboratories**
+
+<YoutubeEmbed  videoid="1gxFWBnDl18" playLabel="Play Video: Getting started with Moddable using xs-dev" />
 
 
 <CardGrid stagger>
