--- a/docs/src/content/docs/es/index.mdx
+++ b/docs/src/content/docs/es/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Starlight 🌟 Construye sitios de documentación con Astro
+title: Sapiens 🌟 Construye sitios de documentación con Astro
 description: Starlight te ayuda a construir sitios web de documentación hermosos y de alto rendimiento utilizando Astro.
 template: splash
 hero:
