--- a/docs/src/content/docs/es/index.mdx
+++ b/docs/src/content/docs/es/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: Sapiens 🌟 Construye sitios de documentación con Astro
+title: Sapiens LABS 🌟 Construye sitios de documentación con Astro
 description: Starlight te ayuda a construir sitios web de documentación hermosos y de alto rendimiento utilizando Astro.
 template: splash
 hero:
-  title: Haz que tus docs brillen con Starlight
-  tagline: Todo lo que necesitas para construir un sitio web de documentación estelar. Rápido, accesible y fácil de usar.
+  title: SAPIENS LABORATORIES
+  tagline: Todo lo que necesitas para construir IA executives de ventas.
   image:
     file: ../../../assets/hero-star.webp
   actions:
